# dowait_mats09

./: .env  .gitignore  MATS9_APPLICATION.md  MATS9_Application_Draft.md  MATS9_Executive_Summary.md  README.md  SUBMISSION_REQUIREMENTS.md  cache.py  context_isolation_test.py  core.py  create_comprehensive_performance_visualization.py  database.py  dataset_tensor_test.py  gpu_test.py  gpu_test_module.py  gpu_test_notebook.ipynb  high_level.py  low_level.py  main.py  models.py  nnsight_steering.py  notebook.py  prompts.py  pyproject.toml  setup_cache.py  setup_error_cache.py  temp_notes.md  test_1.py  test_advanced.py
cache/: error_detection_cache.csv  generation_cache.csv
cache_backup/: error_detection_cache.csv
cache_old_settings/: error_detection_cache.csv  generation_cache.csv
results/: experiment_results.db  experiment_results_2025-08-29_13-58-47_CEST.xlsx  experiment_results_2025-08-29_16-26-51_CEST.xlsx  experiment_results_2025-08-29_18-50-33_CEST.xlsx  experiment_results_2025-08-29_22-15-19_CEST.xlsx  experiment_results_2025-08-29_22-47-28_CEST.xlsx  experiment_results_2025-08-29_23-05-12_CEST.xlsx  experiment_results_2025-08-29_23-20-48_CEST.xlsx  experiment_results_2025-08-30_01-07-13_CEST.xlsx  experiment_results_2025-08-30_01-11-11_CEST.xlsx  experiment_results_2025-08-30_01-56-06_CEST.xlsx  experiment_results_2025-08-30_02-29-05_CEST.xlsx
results_old/: experiment_results_2025-08-29_08-19-17_CEST.xlsx  experiment_results_2025-08-29_08-41-15_CEST.xlsx  experiment_results_2025-08-29_13-34-24_CEST.xlsx  experiment_results_2025-08-29_22-20-18_CEST.xlsx  (+17 more)
(+160 files in other folders)
