[project]
name = "gpu-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
]
